[package]
name = "protocol_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "rp2040",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

pio-proc = "0.3.0"
pio = "0.3.0"
heapless = "0.8.0"
fixed = "1.29.0"
fixed-macro = "1.2.0"

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[[bin]]
name = "picoscope-rs"
path = "src/main.rs"
test = false
doctest = false
bench = false
